Version 2.02.169 - 
=====================================
  Report thin LV date for merged LV when the merge is in progress.
  Detect if snapshot merge really started before polling for progress.
  Checking LV for merging origin requires also it has merged snapshot.
  Extend validation of metadata processing.
  Enable usage of cached volumes as snapshot origin LV.
  Fix displayed lv name when splitting snapshot (2.02.146).
  Warn about command not making metadata backup just once per command.
  Enable usage of cached volume as thin volume's external origin.
  Support cache volume activation with -real layer.
  Improve search of lock-holder for external origin and thin-pool.
  Support status checking of cache volume used in layer.
  Avoid shifting by one number of blocks when clearing dirty cache volume.
  Extend metadata validation of external origin LV use count.
  Fix dm table when the last user of active external origin is removed.
  Improve reported lvs status for active external origin volume.
  Fix table load for splitted RAID LV and require explicit activation.
  Always active splitted RAID LV exclusively locally.
  Do not use LV RAID status bit for segment status.
  Check segtype directly instead of checking RAID in segment status.
  Reusing exiting code for raid image removal.
  Fix pvmove leaving -pvmove0 error device in clustered VG.
  Avoid adding extra '_' at end of raid extracted images or metadata.
  Optimize another _rmeta clearing code.
  Fix deactivation of raid orphan devices for clustered VG.
  Fix lvconvert raid1 to mirror table reload order.
  Add internal function for separate mirror log preparation.
  Fix segfault in lvmetad from missing NULL in daemon_reply_simple.
  Simplify internal _info_run() and use _setup_task_run() for mknod.
  Better API for internal function _setup_task_run.
  Avoid using lv_has_target_type() call within lv_info_with_seg_status.
  Simplify internal lv_info_with_seg_status API.